Closed
Bug 1229240
Opened 7 years ago
Closed 7 years ago
Crash [@ mozilla::dom::MediaStreamTrackBinding::applyConstraints_promiseWrapper]
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Core
WebRTC: Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla46
backlog | webrtc/webaudio+ |
People
(Reporter: jruderman, Assigned: jib)
References
Details
(Keywords: assertion, crash, testcase)
Crash Data
Attachments
(4 files)
120 bytes,
text/html
|
Details | |
10.01 KB,
text/plain
|
Details | |
40 bytes,
text/x-review-board-request
|
jesup
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details |
58 bytes,
text/x-review-board-request
|
jesup
:
review+
|
Details |
Assertion failure: value, at BindingUtils.h:955 bp-e9d7b3be-b6b2-4975-a5c8-58e4e2151201
Reporter | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
May be a MediaStreamTrack issue, but don't know the appropriate component.
Component: Web Audio → Audio/Video: MediaStreamGraph
Comment 3•7 years ago
|
||
->jib to look at
Component: Audio/Video: MediaStreamGraph → WebRTC: Audio/Video
Flags: needinfo?(jib)
Comment 4•7 years ago
|
||
From debugging: this is the source of the nullptr that leads to the assert: /home/jesup/src/mozilla/inbound/dom/media/DOMMediaStream.cpp: already_AddRefed<Promise> DOMMediaStream::ApplyConstraintsToTrack(TrackID aTrackID, const MediaTrackConstraints& aConstraints, ErrorResult &aRv) { return nullptr; }
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jib
Flags: needinfo?(jib)
Assignee | ||
Comment 5•7 years ago
|
||
Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks.
Attachment #8694378 -
Flags: review?(rjesup)
Assignee | ||
Comment 6•7 years ago
|
||
[Tracking Requested - why for this release]: crash
Blocks: 912342
status-firefox42:
--- → unaffected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
tracking-firefox43:
--- → ?
tracking-firefox44:
--- → ?
tracking-firefox45:
--- → ?
Tracked for 44 since it's a crash.
Updated•7 years ago
|
Attachment #8694378 -
Flags: review?(rjesup) → review+
Comment 8•7 years ago
|
||
Comment on attachment 8694378 [details] MozReview Request: Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks. https://reviewboard.mozilla.org/r/26737/#review24331
This is too late to fix in 43 but I'll track it in case it becomes a bigger problem on release.
Updated•7 years ago
|
backlog: --- → webrtc/webaudio+
Rank: 15
Priority: -- → P1
Updated•7 years ago
|
Assignee | ||
Comment 11•7 years ago
|
||
Comment on attachment 8694378 [details] MozReview Request: Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks. Review request updated; see interdiff: https://reviewboard.mozilla.org/r/26737/diff/1-2/
Assignee | ||
Comment 12•7 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/29421/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/29421/
Attachment #8703645 -
Flags: review?(rjesup)
Assignee | ||
Comment 13•7 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #10) > Jan-Ivar, Any reason why this never landed? Thanks for catching that. Just missing a test, otherwise good to go.
Flags: needinfo?(jib)
Comment 14•7 years ago
|
||
Comment on attachment 8703645 [details] MozReview Request: Bug 1229240 - test that applyConstraints() rejects on non-Gum track. https://reviewboard.mozilla.org/r/29421/#review26169
Attachment #8703645 -
Flags: review?(rjesup) → review+
Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Updated•7 years ago
|
Flags: in-testsuite+
Comment 15•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/75cb37ee4361 https://hg.mozilla.org/integration/mozilla-inbound/rev/54d6206da9ee
Keywords: checkin-needed
Comment 16•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/75cb37ee4361 https://hg.mozilla.org/mozilla-central/rev/54d6206da9ee
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Jib, should this be uplifted to Beta44 and Aurora45?
Flags: needinfo?(jib)
Assignee | ||
Comment 18•7 years ago
|
||
Comment on attachment 8694378 [details] MozReview Request: Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks. Approval Request Comment [Feature/regressing bug #]: Bug 912342 [User impact if declined]: Crashable through js. [Describe test coverage new/current, TreeHerder]: landed on m-c with new test. [Risks and why]: very low. Plugs extremely specific edge-case. [String/UUID change made/needed]: none
Flags: needinfo?(jib)
Attachment #8694378 -
Flags: approval-mozilla-beta?
Attachment #8694378 -
Flags: approval-mozilla-aurora?
Comment 19•7 years ago
|
||
Comment on attachment 8694378 [details] MozReview Request: Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks. Fix a crash, taking it.
Attachment #8694378 -
Flags: approval-mozilla-beta?
Attachment #8694378 -
Flags: approval-mozilla-beta+
Attachment #8694378 -
Flags: approval-mozilla-aurora?
Attachment #8694378 -
Flags: approval-mozilla-aurora+
Comment 20•7 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/fe051655f22f https://hg.mozilla.org/releases/mozilla-aurora/rev/422d3820eba6
Comment 21•7 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/541df44447ab https://hg.mozilla.org/releases/mozilla-beta/rev/2b96b7c71910
Comment 22•7 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/541df44447ab https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/2b96b7c71910
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•