Bug 1229240 - make applyConstraints() reject instead of crash on non-gUM tracks. r=jesup

--HG--
extra : rebase_source : fa199b551ddc750b1dbdb20c1d0feafa8e8bc908